1.12.0/_sources/reference/dipy.viz.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`viz`
==========
.. automodule:: dipy.viz

.. currentmodule:: dipy.viz
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.gmem`
-----------------------
.. automodule:: dipy.viz.gmem

.. currentmodule:: dipy.viz.gmem
.. autosummary::

   GlobalHorizon


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon`
--------------------------
.. automodule:: dipy.viz.horizon

.. currentmodule:: dipy.viz.horizon
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.app`
------------------------------
.. automodule:: dipy.viz.horizon.app

.. currentmodule:: dipy.viz.horizon.app
.. autosummary::

   Horizon
   horizon


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab`
------------------------------
.. automodule:: dipy.viz.horizon.tab

.. currentmodule:: dipy.viz.horizon.tab
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab.base`
-----------------------------------
.. automodule:: dipy.viz.horizon.tab.base

.. currentmodule:: dipy.viz.horizon.tab.base
.. autosummary::

   HorizonUIElement
   HorizonTab
   TabManager
   build_label
   build_slider
   build_checkbox
   build_radio_button
   build_switcher


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab.cluster`
--------------------------------------
.. automodule:: dipy.viz.horizon.tab.cluster

.. currentmodule:: dipy.viz.horizon.tab.cluster
.. autosummary::

   ClustersTab


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab.peak`
-----------------------------------
.. automodule:: dipy.viz.horizon.tab.peak

.. currentmodule:: dipy.viz.horizon.tab.peak
.. autosummary::

   PeaksTab


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab.roi`
----------------------------------
.. automodule:: dipy.viz.horizon.tab.roi

.. currentmodule:: dipy.viz.horizon.tab.roi
.. autosummary::

   ROIsTab


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab.slice`
------------------------------------
.. automodule:: dipy.viz.horizon.tab.slice

.. currentmodule:: dipy.viz.horizon.tab.slice
.. autosummary::

   SlicesTab


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.tab.surface`
--------------------------------------
.. automodule:: dipy.viz.horizon.tab.surface

.. currentmodule:: dipy.viz.horizon.tab.surface
.. autosummary::

   SurfaceTab


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.util`
-------------------------------
.. automodule:: dipy.viz.horizon.util

.. currentmodule:: dipy.viz.horizon.util
.. autosummary::

   check_img_shapes
   check_img_dtype
   show_ellipsis
   unpack_surface
   unpack_data
   check_peak_size


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.visualizer`
-------------------------------------
.. automodule:: dipy.viz.horizon.visualizer

.. currentmodule:: dipy.viz.horizon.visualizer
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.visualizer.cluster`
---------------------------------------------
.. automodule:: dipy.viz.horizon.visualizer.cluster

.. currentmodule:: dipy.viz.horizon.visualizer.cluster
.. autosummary::

   ClustersVisualizer


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.visualizer.peak`
------------------------------------------
.. automodule:: dipy.viz.horizon.visualizer.peak

.. currentmodule:: dipy.viz.horizon.visualizer.peak
.. autosummary::

   PeakActor
   PeaksVisualizer
   peak


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.visualizer.slice`
-------------------------------------------
.. automodule:: dipy.viz.horizon.visualizer.slice

.. currentmodule:: dipy.viz.horizon.visualizer.slice
.. autosummary::

   SlicesVisualizer


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.horizon.visualizer.surface`
---------------------------------------------
.. automodule:: dipy.viz.horizon.visualizer.surface

.. currentmodule:: dipy.viz.horizon.visualizer.surface
.. autosummary::

   SurfaceVisualizer


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.panel`
------------------------
.. automodule:: dipy.viz.panel

.. currentmodule:: dipy.viz.panel
.. autosummary::

   build_label
   slicer_panel


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.plotting`
---------------------------
.. automodule:: dipy.viz.plotting

.. currentmodule:: dipy.viz.plotting
.. autosummary::

   compare_maps
   compare_qti_maps
   bundle_profile_plot
   image_mosaic


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.projections`
------------------------------
.. automodule:: dipy.viz.projections

.. currentmodule:: dipy.viz.projections
.. autosummary::

   sph_project


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.regtools`
---------------------------
.. automodule:: dipy.viz.regtools

.. currentmodule:: dipy.viz.regtools
.. autosummary::

   simple_plot
   overlay_images
   draw_lattice_2d
   plot_2d_diffeomorphic_map
   plot_slices
   overlay_slices


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.streamline`
-----------------------------
.. automodule:: dipy.viz.streamline

.. currentmodule:: dipy.viz.streamline
.. autosummary::

   show_bundles
   viz_two_bundles
   viz_vector_field
   viz_displacement_mag



.. currentmodule:: dipy.viz


.. currentmodule:: dipy.viz.gmem


:class:`GlobalHorizon`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GlobalHorizon
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon


.. currentmodule:: dipy.viz.horizon.app


:class:`Horizon`
~~~~~~~~~~~~~~~~


.. autoclass:: Horizon
  :members:
  :show-inheritance:

horizon
~~~~~~~

.. autofunction:: horizon



.. currentmodule:: dipy.viz.horizon.tab


.. currentmodule:: dipy.viz.horizon.tab.base


:class:`HorizonUIElement`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: HorizonUIElement
  :members:
  :show-inheritance:


:class:`HorizonTab`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: HorizonTab
  :members:
  :show-inheritance:


:class:`TabManager`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: TabManager
  :members:
  :show-inheritance:

build_label
~~~~~~~~~~~

.. autofunction:: build_label


build_slider
~~~~~~~~~~~~

.. autofunction:: build_slider


build_checkbox
~~~~~~~~~~~~~~

.. autofunction:: build_checkbox


build_radio_button
~~~~~~~~~~~~~~~~~~

.. autofunction:: build_radio_button


build_switcher
~~~~~~~~~~~~~~

.. autofunction:: build_switcher



.. currentmodule:: dipy.viz.horizon.tab.cluster


:class:`ClustersTab`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClustersTab
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.tab.peak


:class:`PeaksTab`
~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksTab
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.tab.roi


:class:`ROIsTab`
~~~~~~~~~~~~~~~~


.. autoclass:: ROIsTab
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.tab.slice


:class:`SlicesTab`
~~~~~~~~~~~~~~~~~~


.. autoclass:: SlicesTab
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.tab.surface


:class:`SurfaceTab`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: SurfaceTab
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.util

check_img_shapes
~~~~~~~~~~~~~~~~

.. autofunction:: check_img_shapes


check_img_dtype
~~~~~~~~~~~~~~~

.. autofunction:: check_img_dtype


show_ellipsis
~~~~~~~~~~~~~

.. autofunction:: show_ellipsis


unpack_surface
~~~~~~~~~~~~~~

.. autofunction:: unpack_surface


unpack_data
~~~~~~~~~~~

.. autofunction:: unpack_data


check_peak_size
~~~~~~~~~~~~~~~

.. autofunction:: check_peak_size



.. currentmodule:: dipy.viz.horizon.visualizer


.. currentmodule:: dipy.viz.horizon.visualizer.cluster


:class:`ClustersVisualizer`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClustersVisualizer
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.visualizer.peak


:class:`PeakActor`
~~~~~~~~~~~~~~~~~~


.. autoclass:: PeakActor
  :members:
  :show-inheritance:


:class:`PeaksVisualizer`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksVisualizer
  :members:
  :show-inheritance:

peak
~~~~

.. autofunction:: peak



.. currentmodule:: dipy.viz.horizon.visualizer.slice


:class:`SlicesVisualizer`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SlicesVisualizer
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.horizon.visualizer.surface


:class:`SurfaceVisualizer`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SurfaceVisualizer
  :members:
  :show-inheritance:


.. currentmodule:: dipy.viz.panel

build_label
~~~~~~~~~~~

.. autofunction:: build_label


slicer_panel
~~~~~~~~~~~~

.. autofunction:: slicer_panel



.. currentmodule:: dipy.viz.plotting

compare_maps
~~~~~~~~~~~~

.. autofunction:: compare_maps


compare_qti_maps
~~~~~~~~~~~~~~~~

.. autofunction:: compare_qti_maps


bundle_profile_plot
~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundle_profile_plot


image_mosaic
~~~~~~~~~~~~

.. autofunction:: image_mosaic



.. currentmodule:: dipy.viz.projections

sph_project
~~~~~~~~~~~

.. autofunction:: sph_project



.. currentmodule:: dipy.viz.regtools

simple_plot
~~~~~~~~~~~

.. autofunction:: simple_plot


overlay_images
~~~~~~~~~~~~~~

.. autofunction:: overlay_images


draw_lattice_2d
~~~~~~~~~~~~~~~

.. autofunction:: draw_lattice_2d


plot_2d_diffeomorphic_map
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: plot_2d_diffeomorphic_map


plot_slices
~~~~~~~~~~~

.. autofunction:: plot_slices


overlay_slices
~~~~~~~~~~~~~~

.. autofunction:: overlay_slices



.. currentmodule:: dipy.viz.streamline

show_bundles
~~~~~~~~~~~~

.. autofunction:: show_bundles


viz_two_bundles
~~~~~~~~~~~~~~~

.. autofunction:: viz_two_bundles


viz_vector_field
~~~~~~~~~~~~~~~~

.. autofunction:: viz_vector_field


viz_displacement_mag
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: viz_displacement_mag


